# Ubuntu-Music-Bot

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml
cogs/: __init__.py  config.py  meta.py  music.py
core/: Bot.py  Context.py  __init__.py
discord/ext/menus/: __init__.py
utils/: checks.py  db.json  db.py  robopages.py
